# audiotranscription

./: Dockerfile  README.md  docker-compose.yml  env  pyproject.toml
bash_scripts/: docker_entry
notebooks/: gputest.ipynb  run_ccb_app.ipynb  test-whisper-reconstruction-test-2.ipynb  test-whisper.ipynb
src/audiotranscription/: __init__.py
src/audiotranscription/scripts/: app_run_ccb.py  app_run_stages.py
