[project]
name = "audiotranscription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "ccbhelp@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
audiotranscription = "audiotranscription:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
