[project]
name = "audiotranscription"
version = "0.0.1"
description = "A repository to transcribe audio files"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "ccbhelp@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
audiotranscription = "audiotranscription:main"

[build-system]
requires = ["setuptools>=41,<81", 
            "wheel", 
            "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "managed"

[tool.setuptools.package-data]
# include VERSION file to a package
audiotranscription = ["VERSION"]

[tool.setuptools]
# this package will read some included files in runtime, avoid installing it as .zip
zip-safe = false

[tool.setuptools-git-versioning]
enabled = true
version_file = "audiotranscription/VERSION"